Profile manager does not remember the previous choices
Categories
(Toolkit :: Startup and Profile System, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| thunderbird_esr60 | --- | unaffected |
| geckoview66 | --- | unaffected |
| firefox-esr60 | --- | unaffected |
| firefox66 | --- | unaffected |
| firefox67 | + | verified |
| firefox68 | --- | verified |
People
(Reporter: ccomorasu, Assigned: mossop)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
Affected versions
- Fx 67.0b8
- Fx 68.0a1
Affected platforms
- Windows 10 x64
Steps to reproduce
- Go to the folder where the build is installed and open the commander.
- Type: "firefox.exe -p".
- Check/Uncheck the "Use the selected profile without asking at startup"
- Close the Profile Manager.
- Type again in the commander the following string: "firefox.exe -p".
Expected result
- Profile Manager remembers the user choice.
Actual result
- Profile Manager does not remember the user choice.
Regression range
- First bad: 28-03-2019
- Last good: 27-03-2019
- Pushlog: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=c045dd97faf291904e060d8889391497d92b8353&tochange=d2c82f845bfcf1ebd75e3a8aa932f17c3ac9ded8
- Potential regressor: https://bugzil.la/1527704
Additional notes
- Fx 67.0b7 is not affected.
| Reporter | ||
Updated•7 years ago
|
| Reporter | ||
Updated•7 years ago
|
| Assignee | ||
Updated•7 years ago
|
Comment 1•7 years ago
|
||
Tracking as this is a new regression in beta.
Beta 8 uplifts:
https://hg.mozilla.org/releases/mozilla-beta/pushloghtml?fromchange=FIREFOX_67_0b7_RELEASE&tochange=FIREFOX_67_0b8_RELEASE
| Assignee | ||
Comment 2•7 years ago
|
||
Comment 4•7 years ago
|
||
| bugherder | ||
Comment 5•7 years ago
|
||
I'd like to see it verified on nightly.
Dave could you prepare an uplift to beta please? Thanks
| Assignee | ||
Comment 6•7 years ago
|
||
(In reply to Pascal Chevrel:pascalc from comment #5)
I'd like to see it verified on nightly.
Dave could you prepare an uplift to beta please? Thanks
The existing patch aspplies directly to beta.
Comment 7•7 years ago
|
||
(In reply to Dave Townsend [:mossop] (he/him) from comment #6)
(In reply to Pascal Chevrel:pascalc from comment #5)
I'd like to see it verified on nightly.
Dave could you prepare an uplift to beta please? ThanksThe existing patch aspplies directly to beta.
OK, but we need a formal uplift request on this patch to have it on relman and sheriffs radar and to have good bug history for our machine learning tools :)
| Assignee | ||
Comment 8•7 years ago
|
||
(In reply to Pascal Chevrel:pascalc from comment #7)
(In reply to Dave Townsend [:mossop] (he/him) from comment #6)
(In reply to Pascal Chevrel:pascalc from comment #5)
I'd like to see it verified on nightly.
Dave could you prepare an uplift to beta please? ThanksThe existing patch aspplies directly to beta.
OK, but we need a formal uplift request on this patch to have it on relman and sheriffs radar and to have good bug history for our machine learning tools :)
Sorry, thought your comment meant you wanted to wait till it was verified on nightly before then.
| Assignee | ||
Comment 9•7 years ago
|
||
Comment on attachment 9056642 [details]
Bug 1542221: Correctly save the state of nsIToolkitProfileService.startWithLastProfile. r=Gijs
Beta/Release Uplift Approval Request
- Feature/Bug causing the regression: Bug 1527704
- User impact if declined: User won't be able to switch between showing the profile manager on startup or not.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Extremely simple fix to a stupid mistake. Well tested. No risk to taking this at all.
- String changes made/needed:
| Reporter | ||
Comment 10•7 years ago
|
||
I can confirm this issue is fixed, I verified using Fx 68.0a1(2019-04-09), on Windows 10 x64.
Comment 11•7 years ago
|
||
Comment on attachment 9056642 [details]
Bug 1542221: Correctly save the state of nsIToolkitProfileService.startWithLastProfile. r=Gijs
Low risk patch with tests for a P1 regression in 67 and verified by QA on Nightly, uplift approved for 67 beta 10, thanks Dave!
Comment 12•7 years ago
|
||
| bugherder uplift | ||
| Reporter | ||
Comment 13•7 years ago
|
||
I can confirm this issue is no longer reproducible. I verified using Fx 67.0b10 on Windows 10 x64.
Description
•