Bug 1542221: Correctly save the state of nsIToolkitProfileService.startWithLastProfile. r=Gijs a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D26576

--HG--
extra : source : 707da9fd9d959cd881df8f4899d88b16a2d8635b
extra : histedit_source : 381623a07886ba956a57cdb362dad16cfa4eeaf1